<resources>
    <string name="app_name">PT-Controller</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="connection">Connection</string>
    <string name="pt_controller">PT Controller</string>
    <string name="encoder_controller">Encoder Controller</string>
    <string name="status">Status</string>
    <string name="device_list">Device List</string>
    <string name="messageSent">Mensaje enviado exitosamente :</string>
    <string name="messageReceived">Mensaje Recivido :</string>
    <string name="unspectedError">Error inesperado</string>
    <string name="disconnectDevice">Desconectado</string>
    <string name="app_description">Precision Tool Controller is an app design for managing the Optic Encoder Tool, allowing the user to set up time frames for the experiments to take place in, plus saving and extracting data from the tool itself, as well to set up multiple variables of said experiments</string>
    <string name="all_rights_reserved">Todos los derechos reservados</string>
    <string name="text_credits">Jaime Huenchulao  <a href="https://github.com/NikoGB">github.com/NikoGB</a>\nAlex Tardon \t\t\t<a href="https://github.com/AlexFT257">@github.com/AlexFT257</a></string>
    <string name="developed_by">Developed By</string>
    <string name="developed_for">Universidad del Bio-Bio, Laboratorio CIM UBB</string>
    <string name="options">Options</string>
    <string name="tiempo_de_muestreo">Tiempo de muestreo</string>
    <string name="parameters">Parameters</string>
    <string name="en_milisegundos">En Milisegundos</string>
    <string name="fecha_de_termino">Fecha de termino</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="duracion_experimento">Duracion Experimento</string>

</resources>