<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">


    <TextView
        android:id="@+id/textOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/options"
        android:textColor="@color/teal_700"
        android:textSize="28sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textParameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textOptions"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/parameters"
        android:textColor="@color/teal_700"
        android:textSize="16sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="ifContentScrolls"
        android:id="@+id/scrollView"
        android:layout_below="@+id/textParameters"
        android:layout_marginBottom="100dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/tiempoMuestreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="0dp"
                android:hint="@string/tiempo_de_muestreo"
                android:inputType="number"
                android:minHeight="48dp"/>

            <TextView
                android:id="@+id/unidadMilisegundos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/tiempoMuestreo"
                android:text="@string/en_milisegundos"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/duracionExperimento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_below="@+id/tiempoMuestreo"
                android:layout_marginTop="10dp"
                android:hint="@string/duracion_experimento"
                android:inputType="datetime"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/unidadMilisegundos"
                android:layout_alignLeft="@+id/unidadMilisegundos"
                android:layout_marginTop="35dp"
                android:text="@string/fecha_de_termino"
                android:textSize="15sp" />

        </RelativeLayout>
    </ScrollView>



    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollView"
        android:layout_marginTop="-80dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_alignParentStart="true"
        android:backgroundTint="@color/teal_500"
        android:text="@string/send"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receive"
        android:layout_below="@+id/scrollView"
        android:layout_marginTop="-80dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/teal_500"
        android:textColor="@color/white"
        />



</RelativeLayout>