<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">


    <TextView
        android:id="@+id/textAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="About"
        android:textStyle="bold"
        android:textColor="@color/teal_500"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/textInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAbout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:justificationMode="inter_word"
        android:padding="20dp"
        android:text="@string/app_description"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textDevelopBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInfo"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/developed_by"
        android:textColor="@color/teal_500"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textCredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textDevelopBy"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:justificationMode="inter_word"
        android:padding="20dp"
        android:text="@string/text_credits"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textFor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textCredit"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:textColor="@color/teal_500"
        android:text="Developed For"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textUBB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textFor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:justificationMode="inter_word"
        android:padding="20dp"
        android:text="@string/developed_for"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/UBB_logo"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_below="@+id/textUBB"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/ubb_logo"/>


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:justificationMode="inter_word"
        android:padding="20dp"
        android:text="@string/all_rights_reserved"
        android:textSize="12dp"
        android:textStyle="italic" />


</RelativeLayout>